Add WAD control panel