@@ -161,8 +161,8 @@
 	<!-- Scripts -->
 
 	<target name="scripts" description="Creates application shell scripts.">
-		<shell-cmd  name="doomy" todir="${build.dir}/shell/cmd"  jarname="jar\*" mainclass="net.mtrop.doomy.DoomyMain" />
-		<shell-bash name="doomy" todir="${build.dir}/shell/bash" jarname="jar/*" mainclass="net.mtrop.doomy.DoomyMain" />
+		<shell-cmd  name="doomy" todir="${build.dir}/shell/cmd"  options="--enable-native-access=ALL-UNNAMED" jarname="jar\*" mainclass="net.mtrop.doomy.DoomyMain" />
+		<shell-bash name="doomy" todir="${build.dir}/shell/bash" options="--enable-native-access=ALL-UNNAMED" jarname="jar/*" mainclass="net.mtrop.doomy.DoomyMain" />
 	</target>
 
 	<!-- Shells -->
